--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&amp;display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="/assets/css/styles.css"></head>
+      <link rel="stylesheet" href="/public/assets/css/styles.css"></head>
   <body id="body">
    
    
@@ -51,11 +51,11 @@
       popup.classList.toggle("open")
       }  
     </script>
-      <script src="/assets/js/surf.js">
+      <script src="/public/assets/js/surf.js">
     </script>
-      <script src="/assets/js/index.js">
+      <script src="/public/assets/js/index.js">
     </script>
-  <script src="/assets/js/theme.js">
+  <script src="/public/assets/js/theme.js">
     </script>
    
 </div></body></html>
