--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&amp;display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="/public/assets/css/styles.css"></head>
+      <link rel="stylesheet" href="public/assets/css/styles.css"></head>
   <body id="body">
    
    
@@ -15,7 +15,7 @@
    <iframe id="frame" style="display:block; visibility: hidden;"></iframe> 
   <div id="settings">
   <button onclick="openTab()"> 
-    <img alt="settings" src="/assets/img/settings.png" id="settingsbtn">
+    <img alt="settings" src="public/assets/img/settings.png" id="settingsbtn">
   </button>
   </div>
   
@@ -51,11 +51,11 @@
       popup.classList.toggle("open")
       }  
     </script>
-      <script src="/public/assets/js/surf.js">
+      <script src="public/assets/js/surf.js">
     </script>
-      <script src="/public/assets/js/index.js">
+      <script src="public/assets/js/index.js">
     </script>
-  <script src="/public/assets/js/theme.js">
+  <script src="public/assets/js/theme.js">
     </script>
    
 </div></body></html>
